# POOproject

./: .gitignore  README.md  XMLRPCclient.py
Client/: .clang-format  .cmake-format.yaml  CMakeLists.txt
Client/cmake/: CPM.cmake  Docs.cmake
Client/docs/: Doxyfile
Client/docs/html/: CMakeLists_8txt.html  CustomExceptions_8h.html  CustomExceptions_8h__dep__incl.map  CustomExceptions_8h__dep__incl.md5  CustomExceptions_8h__incl.map  CustomExceptions_8h__incl.md5  CustomExceptions_8h_source.html  RobotInterface_8cpp.html  RobotInterface_8cpp__incl.map  RobotInterface_8cpp__incl.md5  RobotInterface_8h.html  RobotInterface_8h__dep__incl.map  RobotInterface_8h__dep__incl.md5  RobotInterface_8h__incl.map  RobotInterface_8h__incl.md5  RobotInterface_8h_source.html  Tasks_8h.html  Tasks_8h__dep__incl.map  Tasks_8h__dep__incl.md5  Tasks_8h__incl.map  Tasks_8h__incl.md5  Tasks_8h_source.html  UserInterface_8cpp.html  UserInterface_8cpp__incl.map  UserInterface_8cpp__incl.md5  UserInterface_8h.html  UserInterface_8h__dep__incl.map  UserInterface_8h__dep__incl.md5  UserInterface_8h__incl.map  UserInterface_8h__incl.md5  UserInterface_8h_source.html  annotated.html  classCustomExceptions_1_1ErrorSelection-members.html  classCustomExceptions_1_1ErrorSelection.html  classCustomExceptions_1_1ErrorSelection__inherit__graph.map  classCustomExceptions_1_1ErrorSelection__inherit__graph.md5  classCustomExceptions_1_1InputError-members.html  classCustomExceptions_1_1InputError.html  classCustomExceptions_1_1InputError__inherit__graph.map  classCustomExceptions_1_1InputError__inherit__graph.md5  (+37 more)
Client/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  namespaces_1.js  namespaces_2.js  namespaces_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+2 more)
Client/lib/XmlRpc/: CMakeLists.txt  XmlRpcClient.cpp  XmlRpcServerConnection.cpp  XmlRpcSocket.cpp
Client/src/: CMakeLists.txt  RobotInterface.cpp  UserInterface.cpp  main.cpp
Client/src/include/: CustomExceptions.h  RobotInterface.h  Tasks.h  UserInterface.h
Cliente Integrador/: Cliente.cpp  Cliente.h  PanelControl_cliente.cpp  XmlRpcClient.cpp  XmlRpcDispatch.cpp  XmlRpcServerConnection.cpp  XmlRpcUtil.cpp
SERVIDOR Python 2/: Articulacion.py  ModoAutonomo.py  Pinza.py  Reporte.py  RobotRRR.py  XMLRPCserver.py  XMLRPCserver_main.py  consolaServidor.py
Server/: .style.yapf  Articulacion.py  AutoMode.py  Console.py  Gripper.py  Joint.py  Pinza.py  Report.py  Reporte.py  RobotRRR.py  XMLRPCserver.py
Server/src/: AutoMode.py  Console.py  Gripper.py  Joint.py  Report.py  RobotRRR.py  XMLRPCserver.py  XMLRPCserver_main.py
Server/src/util/: logger.py  modoAutonomo.txt
